# mgclient

./: .clang-format  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build_clean.sh
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
examples/: CMakeLists.txt  advanced.cpp  basic.c  basic.cpp
include/: mgclient-error.h  mgclient-value.hpp  mgclient.h  mgclient.hpp  mgvalue.hpp
mgclient_cpp/: CMakeLists.txt
mgclient_cpp/include/: mgclient-value.hpp  mgclient.hpp
src/: CMakeLists.txt  mgallocator.c  mgallocator.h  mgclient.c  mgcommon.h  mgconstants.h  mgmessage.c  mgmessage.h  mgsession-decoder.c  mgsession-encoder.c  mgsession.c  mgsession.h  mgsocket-posix.c  mgsocket-windows.c  mgsocket.h  mgtransport.c  mgtransport.h  mgvalue.c  mgvalue.h  mgwasm.c  mgwasm.h
src/apple/: mgcommon.h  mgsocket.c  mgsocket.h
src/linux/: mgcommon.h  mgsocket.c  mgsocket.h
src/windows/: mgcommon.h  mgsocket.c  mgsocket.h
tests/: CMakeLists.txt  allocator.cpp  bolt-testdata.hpp  client.cpp  decoder.cpp  encoder.cpp  gmock_wrapper.h  memgraph.cpp  test-common.hpp  transport.cpp  value.cpp
tests/cpp/: mgclient_value.cpp
tests/integration/: basic.cpp  basic_c.cpp  basic_cpp.cpp  memgraph.cpp
tests/integration_cpp/: basic.cpp
tests/unit/: mgclient_value.cpp
tool/: coverage.sh  format.sh
wasm/: activate.sh  install_deps.sh
